--- a/05_CSS/Exercices/exo5/style.css
+++ b/05_CSS/Exercices/exo5/style.css
@@ -15,13 +15,17 @@ body{
 }
 
 header{    
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */    
+    text-align: center;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 h1{
     font-size: 3rem;
+    grid-row: 2;
 }
 
 section{
