--- a/17_React/exercices/12_exercice_api/src/components/modal/modal.module.css
+++ b/17_React/exercices/12_exercice_api/src/components/modal/modal.module.css
@@ -14,6 +14,7 @@
     align-items: center;
     color: black;
     width: 40%;
-    max-width: 350px;
-    border-radius: 1rem;
+    max-width: 650px;    
+    border-radius: 0.3rem;
+    padding: 1rem;
 }
