--- a/17_React/exercices/14_exercice_api_openlibrary/src/App.css
+++ b/17_React/exercices/14_exercice_api_openlibrary/src/App.css
@@ -1,8 +1,8 @@
-#root {  
-  margin: 0 auto;  
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
-  min-height: 100dvh;
-  width: 100dvw;
 }
 
 .logo {
@@ -39,10 +39,4 @@
 
 .read-the-docs {
   color: #888;
-}
-
-#liste-pays{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
 }
