--- a/19_Java/09_Spring/exercices/02_exercice_spring_products/02_exercice_spring_products/src/main/resources/templates/productDetail.html
+++ b/19_Java/09_Spring/exercices/02_exercice_spring_products/02_exercice_spring_products/src/main/resources/templates/productDetail.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-    <p>Id: <span th:text="${product.getId()}"></span></p>
+    <p style="color: chocolate">Id: <span th:text="${product.getId()}"></span></p>
     <p>Nom: <span th:text="${product.getName()}"></span></p>
     <p>Catégory: <span th:text="${product.getCategory()}"></span></p>
-    <p>Prix: <span th:text="${product.getPrice()}"></span></p>
+    <p>Prix: <span th:text="${product.getPrice()}"></span> €</p>
 
 </body>
 </html>
