--- a/19_Java/09_Spring/exercices/02_exercice_spring_products/02_exercice_spring_products/src/main/resources/templates/productsList.html
+++ b/19_Java/09_Spring/exercices/02_exercice_spring_products/02_exercice_spring_products/src/main/resources/templates/productsList.html
@@ -7,13 +7,26 @@
 <body>
 <div>
     <table th:if="${!products.isEmpty()}">
-        <tr th:each="p : ${products}">
-            <td th:text="${p.getId()}"> </td>
-            <td th:text="${p.getName()}"> </td>
-            <td th:text="${p.getCategory()}"> </td>
-            <td th:text="${p.getPrice()}"> </td>
-            <td> <a th:href="@{/products/{id}(id=${p.getId()})}">Lien du détail</a> </td>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nom</th>
+            <th>Catégorie</th>
+            <th>Pognon, le blé, la maille, la thune quoi...</th>
+            <th>Clique plus bas</th>
         </tr>
+        </thead>
+        <tbody>
+            <tr th:each="p : ${products}">
+                <td th:text="${p.getId()}"> </td>
+                <td th:text="${p.getName()}"> </td>
+                <td th:text="${p.getCategory()}"> </td>
+                <td th:text="${p.getPrice() + ' €'}"> </td>
+                <td> <a th:href="@{/products/{id}(id=${p.getId()})}">Lien du détail</a> </td>
+            </tr>
+        </tbody>
+
+
 
     </table>
 </div>
