--- a/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentForm.html
+++ b/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentForm.html
@@ -21,11 +21,16 @@
             </div>
 
             <div>
+                <label for="age" class="form-label mt-4">Age: </label>
+                <input type="number" class="form-control" id="age" placeholder="18" th:field="*{age}">
+            </div>
+
+            <div>
                 <label for="email" class="form-label mt-4">Email: </label>
                 <input type="email" class="form-control" id="email" placeholder="email" th:field="*{email}">
             </div>
 
-            <button class="btn btn-success">Ajouter</button>
+            <button class="btn btn-success mt-4">Ajouter</button>
 
         </form>
     </main>
