--- a/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentDetails.html
+++ b/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentDetails.html
@@ -12,8 +12,8 @@
             <div class="card-body">
                 <h4 class="card-title" th:text="${student.getLastname()}"></h4>
                 <h6 class="card-subtitle mb-2 text-muted" th:text="${student.getFirstname()}"></h6>
-                <p class="card-text" th:text="${student.getEmail()}"></p>
-                <p class="card-text" th:text="${student.getAge()}"></p>
+                <p class="card-text" th:text="'email: ' + ${student.getEmail()}"></p>
+                <p class="card-text" th:text="'âge: ' +  ${student.getAge()}"></p>
                 <a th:href="@{/}" class="card-link">Retour à l'accueil</a>
             </div>
         </div>
