--- a/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentDetails.html
+++ b/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentDetails.html
@@ -14,7 +14,12 @@
                 <h6 class="card-subtitle mb-2 text-muted" th:text="${student.getFirstname()}"></h6>
                 <p class="card-text" th:text="'email: ' + ${student.getEmail()}"></p>
                 <p class="card-text" th:text="'âge: ' +  ${student.getAge()}"></p>
-                <a th:href="@{/}" class="card-link">Retour à l'accueil</a>
+                <div class="d-flex">
+                    <a th:href="@{/update/{id}(id=${student.getId()})}" class="btn btn-info">Mutater l'étudiant</a>
+                    <a th:href="@{/delete/{id}(id=${student.getId()})}" class="btn btn-danger ms-2">Eliminer l'étudiant</a>
+                    <a th:href="@{/}" class="card-link ms-auto ">Retour à l'accueil</a>
+                </div>
+
             </div>
         </div>
     </main>
