--- a/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentForm.html
+++ b/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentForm.html
@@ -10,6 +10,8 @@
     <main class="container">
         <form th:action="@{/add}" th:object="${student}" method="post">
 
+            <input type="text" class="d-none" th:field="*{id}">
+
             <div>
                 <label for="firstname" class="form-label mt-4">Prénom: </label>
                 <input type="text" class="form-control" id="firstname" placeholder="Prénom" th:field="*{firstname}">
@@ -30,7 +32,8 @@
                 <input type="email" class="form-control" id="email" placeholder="email" th:field="*{email}">
             </div>
 
-            <button class="btn btn-success mt-4">Ajouter</button>
+            <button class="btn btn-success mt-4" th:if="${student.getId() == null}">Ajouter</button>
+            <button class="btn btn-primary mt-4" th:if="${student.getId() != null}">Modifier</button>
 
         </form>
     </main>
