--- a/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentForm.html
+++ b/19_Java/09_Spring/exercices/03_exercice_spring_student_form/03_exercice_spring_student_form/src/main/resources/templates/studentForm.html
@@ -15,21 +15,25 @@
             <div>
                 <label for="firstname" class="form-label mt-4">Prénom: </label>
                 <input type="text" class="form-control" id="firstname" placeholder="Prénom" th:field="*{firstname}">
+                <span th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}"></span>
             </div>
 
             <div>
                 <label for="lastname" class="form-label mt-4">Nom: </label>
                 <input type="text" class="form-control" id="lastname" placeholder="Nom de famille" th:field="*{lastname}">
+                <span th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></span>
             </div>
 
             <div>
                 <label for="age" class="form-label mt-4">Age: </label>
                 <input type="number" class="form-control" id="age" placeholder="18" th:field="*{age}">
+                <span th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></span>
             </div>
 
             <div>
                 <label for="email" class="form-label mt-4">Email: </label>
                 <input type="email" class="form-control" id="email" placeholder="email" th:field="*{email}">
+                <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
             </div>
 
             <button class="btn btn-success mt-4" th:if="${student.getId() == null}">Ajouter</button>
