--- a/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/user/login.html
+++ b/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/user/login.html
@@ -28,6 +28,8 @@
         <button class="btn btn-success mt-4">Connexion</button>
 
     </form>
+
+    <a th:href="@{/signup}">Pas encore de compte?</a>
 </main>
 
 
