--- a/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/fragments/header.html
+++ b/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/fragments/header.html
@@ -8,24 +8,24 @@
 <th:block th:fragment="header">
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-            <h1 class="navbar-brand mt-2">Exercice 6 Forum</h1>
-<!--            <div class="collapse navbar-collapse" id="navbarColor01">-->
-<!--                <ul class="navbar-nav me-auto">-->
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link active" th:href="@{/}">Meubles-->
-<!--                            <span class="visually-hidden">(current)</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
+            <h1 class="navbar-brand mt-2">Forum - Assume.Com</h1>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" th:href="@{/forum}">Accueil
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
 <!--                    <li class="nav-item">-->
 <!--                        <a class="nav-link active" th:href="@{/categories}">Catégories-->
 <!--                            <span class="visually-hidden">(current)</span>-->
 <!--                        </a>-->
 <!--                    </li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--            <div class="d-flex">-->
-<!--                <a class="nav-item" th:href="@{/cartItem}">Panier </a>-->
-<!--            </div>-->
+                </ul>
+            </div>
+            <div class="d-flex" th:if="${session.login}">
+                <a class="btn btn-dark" th:href="@{/logout}">Déconnexion</a>
+            </div>
         </div>
     </nav>
 </th:block>
