petit ajout exercice 66 spring forum

--- a/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/fragments/header.html
+++ b/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/fragments/header.html
@@ -24,6 +24,7 @@
                 </ul>
             </div>
             <div class="d-flex" th:if="${session.login}">
+                <span th:text="${session.user.getName()}" class="btn btn-primary me-3"></span>
                 <a class="btn btn-dark" th:href="@{/logout}">Déconnexion</a>
             </div>
         </div>
