--- a/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/message/messageDetail.html
+++ b/19_Java/09_Spring/exercices/06_exercice_spring_forum/06_exercice_spring_forum/src/main/resources/templates/message/messageDetail.html
@@ -14,7 +14,7 @@
   <p th:text="${message.getContent()}"></p>
 
 
-  <section th:if="${!responses.isEmpty()}">
+  <section th:if="${!responses.isEmpty()}" class="p-5">
     <h2>Réponses</h2>
 
     <article th:each="r : ${responses}">
